# zecscope

./: .gitignore  README.md  package-lock.json  package.json
api/: Dockerfile  package.json
api/src/: lightwalletdClient.ts  server.ts
api/src/routes/: zcash.ts
crates/zecscope-scanner/: Cargo.toml  LICENSE  README.md
crates/zecscope-scanner/src/: error.rs  lib.rs  scanner.rs  types.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  audit.ts  styles.css  types.ts
web/src/state/: alertsStore.ts  keysStore.ts  transactionsStore.ts
web/src/wasm/: zcash-wasm.d.ts  zcashScanner.ts
zcash-wasm/: Cargo.toml
zcash-wasm/src/: lib.rs
