[package]
name = "zcash_wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for zecscope-scanner - scan Zcash shielded transactions in the browser"
license = "MIT"
repository = "https://github.com/yourusername/zecscope"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# Use our scanner crate with WASM support
zecscope-scanner = { path = "../crates/zecscope-scanner", features = ["wasm"] }
